--- a/templates/base.html
+++ b/templates/base.html
@@ -42,13 +42,10 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Us</a>
             </li>
+           
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:login'%}">Login</a>
+              <a class="nav-link" href="{% url 'accounts:user_logout' %}">Logout</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'accounts:register'%}">Register</a>
-            </li>
-
           </ul>
           <form class="d-flex">
             <a href="{% url 'blog:add_post' %}" class="btn btn-success">Add Post</a>  
